# Unwordler

./: .gitignore  CMakeLists.txt  README.md
res/: words.txt  words_freq.txt
src/: app.cpp  button.cpp  grid.cpp  word_engine.cpp
src/include/: app.h  button.h  grid.h  word_bag.h  word_engine.h
